Fixes #140 - Replacing Deprecated Constructor Calls for Wrapper Classes  - Replaced ListUtils.unmodifiableList(..) with List.of(..)